Minor text changes

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -788,10 +788,11 @@
                   There are hundreds of millions to billions of different types
                   of bacteria living on planet earth, which dwarfs the meager 2
                   million different kinds of animals and plants that you can see
-                  with your eyes. The average American has 187 different types of
-                  microbes in a stool sample, which is lower than we find in
-                  people living a more hunter-gatherer lifestyle, like the 306 we
-                  find in samples from the Hadza Tribe. 
+                  with your eyes. The average American has <strong>187</strong>
+                  different types of microbes in a stool sample, which is lower
+                  than we find in people living a more hunter-gatherer
+                  lifestyle, like the <strong>306</strong> we find in samples
+                  from the Hadza Tribe. 
                   </p>
 
                   <div class="card your_sample_diversity_inset">
@@ -799,7 +800,7 @@
                       <div class="card-body">
                           <h5 class="card-title">XXX</h5>
                           <p class="card-text"> 
-                          Is the number of microbes found in your sample, which makes you FILL-IN similar to the average American.
+                          Is the number of microbes found in your sample. 
                           </p>
                       </div>
                   </div>
