A little more hook to microbial maps

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -720,7 +720,7 @@
                 </p>
                 
                 <p>
-                Scientists often use 3 different approaches to see how your microbiome differs:
+                Scientists often use many different approaches to see how your microbiome differs:
                 </p>
 
                 <div class="how_you_compare_section">
@@ -773,7 +773,18 @@
                     they were in your sample!
                     </p>
                 </div>
-            </div>
+                </br>
+
+                <div class="how_you_compare_section">
+                    <h4>Microbial maps</h4>
+                    <p>
+                    Using the microbial similarities mentioned above, we have
+                    constructed <a class="fake-tab" href="#microbial-map" data-link="#microbial-map-tab">Microbial maps</a> to help you see how your sample
+                    relates to other populations, different animals, and
+                    surfaces places we spend a lot of time (like office spaces)!
+                    </p>
+                </div>
+              </div>
           </div>
           <div class="tab-pane fade" id="diversity" role="tabpanel" aria-labelledby="diversity-tab">
               <div class="column results_text">
